tests/react_16_3/react_16_3.exp
Error ---------------------------------------------------------------------------------------------- forwardRef.js:12:12

Cannot create `FancyButton` element because property `foo` is missing in props [1] but exists in `Props` [2].

   forwardRef.js:12:12
   12| const _a = <FancyButton />; // Error, missing foo
                  ^^^^^^^^^^^^^^^ [1]

References:
   forwardRef.js:5:38
    5| const FancyButton = React.forwardRef<Props, _>((props, ref) => (
                                            ^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- forwardRef.js:14:12

Cannot create `FancyButton` element because property `bar` is missing in `Props` [1] but exists in props [2].

   forwardRef.js:14:12
   14| const _c = <FancyButton foo={3} bar={3} />; // Error bar, not allowed in exact props
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]

References:
   forwardRef.js:5:38
    5| const FancyButton = React.forwardRef<Props, _>((props, ref) => (
                                            ^^^^^ [1]


Error ---------------------------------------------------------------------------------------------- forwardRef.js:20:12

Cannot create `FancyButton` element because in property `ref`:
 - Either `HTMLDivElement` [1] is incompatible with `HTMLButtonElement` [2] in property `current`.
 - Or a callable signature is missing in object type [3] but exists in function type [4].

   forwardRef.js:20:12
    20| const _e = <FancyButton foo={3} ref={badRef} />; // Incorrect ref type
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   forwardRef.js:19:32
    19| const badRef = React.createRef<HTMLDivElement>();
                                       ^^^^^^^^^^^^^^ [1]
   <BUILTINS>/react-dom.js:289:22
   289|   button: {instance: HTMLButtonElement, props: {children?: React$Node, [key: string]: any}},
                             ^^^^^^^^^^^^^^^^^ [2]
   <BUILTINS>/react.js:241:6
   241|   ): {current: null | T};
             ^^^^^^^^^^^^^^^^^^^ [3]
   <BUILTINS>/react.js:196:6
   196|   | ((React$ElementRef<ElementType> | null) => mixed)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [4]


Error ---------------------------------------------------------------------------------------------- forwardRef.js:23:13

Cannot create `FancyButton` element because in property `ref`:
 - Either property `current` is missing in function [1] but exists in object type [2].
 - Or `HTMLDivElement` [3] is incompatible with `HTMLButtonElement` [4] in the first argument.

   forwardRef.js:23:13
    23| const _g =  <FancyButton foo={3} ref={(x: null | HTMLDivElement) => x} />; // Incorrect ref type
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   forwardRef.js:23:39
    23| const _g =  <FancyButton foo={3} ref={(x: null | HTMLDivElement) => x} />; // Incorrect ref type
                                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   <BUILTINS>/react.js:195:5
   195|   | {current: React$ElementRef<ElementType> | null}
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]
   forwardRef.js:23:50
    23| const _g =  <FancyButton foo={3} ref={(x: null | HTMLDivElement) => x} />; // Incorrect ref type
                                                         ^^^^^^^^^^^^^^ [3]
   <BUILTINS>/react-dom.js:289:22
   289|   button: {instance: HTMLButtonElement, props: {children?: React$Node, [key: string]: any}},
                             ^^^^^^^^^^^^^^^^^ [4]



Found 4 errors

Only showing the most relevant union/intersection branches.
To see all branches, re-run Flow with --show-all-branches
